<resources>
    <string name="app_name">PAC-Desarrollo</string>
    <string name="back">Atrás</string>
    <string name="goToActivity1">ir al Activity 1</string>
    <string name="goToActivity2">ir al Activity 2</string>
    <string name="goToActivity3">ir al Activity 3</string>
    <string name="createTable">Crear tabla</string>
    <string name="insertData">Insertar datos</string>
    <string name="getData">Consultar datos</string>
    <string name="createService">Crear nuevo servicio</string>
    <string name="stopService">Detener servicio</string>
    <string name="play">Reproducir música</string>
    <string name="pause">Pausar música</string>
    <string name="sleep">DORMIR 15seg</string>
    <string name="freeze150sec">Bloquear durante 150000ms</string>
    <string name="insertTableName">Introduce el nombre de la tabla</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="deleteTable">Borrar tabla</string>
    <string name="tableExistMessage">¿Quieres borrarla y volverla a crear?</string>
    <string name="tableExistTitle">La tabla "%1$s" ya existe</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="tableDeleted">La tabla "%1$s" se ha eliminado</string>
    <string name="tableNotExist">La tabla "%1$s" no existe</string>
    <string name="tableWasCreated">La tabla "%1$s" ha sido creada</string>
    <string name="tableRecreatedDeleted">La tabla "%1$s" ha sido recreada</string>
    <string name="description">descripcion</string>
    <string name="price">price</string>
    <string name="firstCreateTableTitle">Primero tienes que crear una tabla</string>
    <string name="firstCreateTableMessage">¿Quieres ir a crear una tabla?</string>
    <string name="descriptionNotValid">Dale una descripción al artículo</string>
    <string name="priceNotValid">El precio ha de ser mayor que 0</string>
    <string name="tableExistsTitle">Hay una tabla existente</string>
    <string name="tableExistsMessage">Quieres borrarla y crear otra?</string>
    <string name="tableIsInUseMessage">La tabla "%1$s" está usandose. ¿Quieres seguir con ella o borrarla y crear una nueva?</string>
    <string name="tableIsInUseTitle">Hay una tabla en uso</string>
    <string name="deleteAndCreate">borrarla y crear una nueva</string>
    <string name="stayAsIs">seguir con ella</string>
    <string name="editSuccesfull">Item editado con éxito</string>
    <string name="editData">Editar</string>
    <string name="goToService">Ir al servicio</string>
    <string name="youAreInActivity3">Estás en la Activity3</string>
    <string name="youAreInActivity2">Estás en la Activity 2</string>
</resources>